...
            <Button
                android:id="@+id/cancelFacilityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="Cancel"
                android:textColor="@color/buttonPrimary"
                android:backgroundTint="@color/white"
                app:cornerRadius="@dimen/button_corner_radius" />

            <!-- Delete Facility Button -->
            <Button
                android:id="@+id/deleteFacilityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="Delete"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonPrimary"
                app:cornerRadius="@dimen/button_corner_radius" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
...
