...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RecyclerView for User List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/waitingListTitle"
        app:layout_constraintBottom_toTopOf="@id/bottomButtonsLayout"
        app:layout_constraintStart_toStartOf="parent"
...
            android:textColor="@color/textColorOnSecondary"
            android:backgroundTint="@color/white"
            app:cornerRadius="16dp" /> <!-- Reduced the bottom margin -->

        <!-- Sample Attendees Randomly Button with Icon -->
        <Button
            android:id="@+id/sampleAttendeesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample Attendees Randomly"
            android:textColor="@color/buttonTextColor"
            android:textSize="@dimen/text_size_large"
            android:backgroundTint="@color/buttonPrimary"
...
