...
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
